tests/fixtures/invalid/pow_str_none_int.py
# Cannot call pow() with Str, None, Int
x = pow("hello", None, 1)
